# hoarder

./: .gitignore  .pylintrc  Makefile  README.md  justfile  mypy.ini  pyproject.toml  requirements.txt
src/: ankiconnect.py  cache.py  config.py  main.py  tray.py
src/hoarder/: __main__.py  cache.py  config.json  main.py  tray.py
